examples/errors/undeclared.jc
age = 30; // error: assignment without keep
say(age);
